# CPP-Readability

./: README.md  readme_aeneas_dump.txt
cpp-readability-prediction/: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh
cpp-readability-prediction/models/: model_AllMerged_MLP_All_Without_FS.pkl  model_AllMerged_MLP_BW_With_FS.pkl  model_AllMerged_MLP_Dorn_Without_FS.pkl  model_AllMerged_MLP_Posnett_Without_Fs.pkl  model_AllMerged_MLP_Scal_With_FS.pkl  model_OpenSourceAll_Logreg_All_Without_Fs.pkl  model_OpenSourceAll_Logreg_BW_Without_Fs.pkl  model_OpenSourceAll_Logreg_Dorn_Without_Fs.pkl  model_OpenSourceAll_Logreg_Posnett_Without_Fs.pkl  model_OpenSourceAll_Logreg_Scal_With_Fs.pkl  model_SpaceMerged_Knn_All_With_Fs.pkl  model_SpaceMerged_Knn_BW_With_Fs.pkl  model_SpaceMerged_Knn_Dorn_Without_Fs.pkl  model_SpaceMerged_Knn_Posnett_Without_Fs.pkl  model_SpaceMerged_Knn_Scal_Without_FS.pkl  model_SpaceOnly_Mlp_All_With_Fs.pkl  model_SpaceOnly_Mlp_BW_With_Fs.pkl  model_SpaceOnly_Mlp_Dorn_Without_Fs.pkl  model_SpaceOnly_Mlp_Posnett_Without.pkl  model_SpaceOnly_Mlp_Scal_Without_Fs.pkl  space_only2.pickle
cpp-readability-prediction/readability_for_c/: build_models.py  cli.py  cli_cmd.py  crawl_cmd.py  extract_readability_cmd.py  metrics_cmd.py  readability_cmd.py  text_processing.py  utils.py  wordnet.py
cpp-readability-prediction/readability_for_c/code_processing/: analyzer.py  bodycomment.py  filter_manager.py  lexer.py  parser.py  rse_lexer.py
cpp-readability-prediction/tests/: test_text_processing.py  test_wordnet.py
(+25 files in other folders)
